summited full review codes

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ FRONTEND_URL=http://localhost:3000
 # ============================================
 # DATABASE CONFIGURATION
 # ============================================
-MONGODB_URI=mongodb://localhost:27017/resume-job-portal
+MONGODB_URI=mongodb+srv://resumejobport_ai:B12MDf0VyxCSkgDW@cluster0.wqouzvs.mongodb.net/resume_job_portal
 
 # For MongoDB Atlas:
 # MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/resume-job-portal?retryWrites=true&w=majority
