--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node src/scripts/seed.js",
+    "seed:themes": "node scripts/seed-themes-from-frontend.js",
+    "seed:section-layouts": "node scripts/seed-section-layouts-from-frontend.js",
+    "seed:all-frontend": "npm run seed:themes && npm run seed:section-layouts",
     "test": "jest --coverage",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.js\"",
-     "init-plans": "node src/scripts/initPlans.js"
+    "init-plans": "node src/scripts/initPlans.js"
   },
   "keywords": [
     "resume",
@@ -29,11 +32,12 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "google-auth-library": "^9.14.2",
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -44,7 +48,6 @@
     "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "google-auth-library": "^9.14.2",
     "pdfkit": "^0.14.0",
     "razorpay": "^2.9.2",
     "stripe": "^14.7.0"
